# photo_web

./: .gitignore  pyproject.toml
app/app/: settings.py  urls.py
app/blog/: admin.py  forms.py  models.py  urls.py  views.py
app/blog/migrations/: 0001_initial.py  0002_initial.py  0002_remove_post_slug_post_image_blog_post_blog.py  0003_alter_blog_slug_alter_post_blog.py  0004_remove_post_image_post_photo_alter_post_content_and_more.py
app/main/: admin.py  models.py  urls.py  views.py
app/main/migrations/: 0001_initial.py  0002_initial.py  0002_review.py  0003_alter_portfolio_options_remove_portfolio_image_and_more.py  0003_remove_portfolio_photographer.py  0004_alter_portfolio_photographer.py  0004_alter_portfolio_photos.py  0005_delete_review.py
app/photo_app/: admin.py  forms.py  models.py  urls.py  views.py
app/photo_app/migrations/: 0001_initial.py  0002_initial.py  0002_photo_description_photo_public_id.py  0002_photo_user.py  0003_photo_is_public_alter_photo_public_id.py  0003_remove_photo_image.py  0004_rename_user_photo_owner.py  0005_photo_image_url.py  0006_photo_rating.py  0007_alter_photo_rating.py  0008_remove_photo_rating.py  0009_rating.py
app/photo_app/static/: photo_app.css
app/photo_app/utils/: image_validator.py  utils.py
app/reviews/: admin.py  forms.py  models.py  urls.py  views.py
app/reviews/migrations/: 0001_initial.py  0002_initial.py
app/services/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
app/templates/: base.html
app/users/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
(+59 files in other folders)
